--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-<privacy.html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -70,3 +70,4 @@
     Website: <a href="[https://www.facebook.com/profile.php?id=61574775780963]">[Insert Website URL]</a></p>
 </body>
 </html>
+
